...
            <objects>
                <windowController storyboardIdentifier="Manage" id="qNI-U3-tLX" customClass="ManageWindowController" customModule="KubeContext" customModuleProvider="target" sceneMemberID="viewController">
                    <window key="window" title="Context Management" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" releasedWhenClosed="NO" visibleAtLaunch="NO" frameAutosaveName="" animationBehavior="default" id="OJ9-US-PgK">
                        <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES"/>
                        <rect key="contentRect" x="196" y="240" width="500" height="350"/>
...
                                            </textFieldCell>
                                        </textField>
                                        <popUpButton identifier="management-popcluster" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="SE9-Fz-1MZ">
                                            <rect key="frame" x="108" y="192" width="267" height="25"/>
                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
...
                                            </connections>
                                        </popUpButton>
                                        <popUpButton identifier="management-popuser" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="gPy-Kh-wHt">
                                            <rect key="frame" x="108" y="115" width="267" height="25"/>
                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
...
                                            </textFieldCell>
                                        </textField>
                                        <textField identifier="management-name" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="GNJ-zF-DCJ">
                                            <rect key="frame" x="110" y="237" width="262" height="22"/>
                                            <autoresizingMask key="autoresizingMask"/>
...
                                            </textFieldCell>
                                        </textField>
                                        <textField identifier="management-namespace" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="rbn-y7-NIm">
                                            <rect key="frame" x="110" y="74" width="262" height="22"/>
                                            <autoresizingMask key="autoresizingMask"/>
...
                                <rect key="frame" x="555" y="17" width="75" height="32"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                <buttonCell key="cell" type="push" title="Apply" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="AYR-OI-7e3">
                                    <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                    <font key="font" metaFont="system"/>
...
                                <rect key="frame" x="472" y="17" width="80" height="32"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                <buttonCell key="cell" type="push" title="Revert" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="05o-wm-3As">
                                    <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                    <font key="font" metaFont="system"/>
...
                                </connections>
                            </button>
                            <searchField identifier="management-search" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="M3S-earch-001">
                                <rect key="frame" x="20" y="325" width="193" height="22"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
...
                                </connections>
                            </button>
                            <segmentedControl identifier="add" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="dvR-NI-uhk">
                                <rect key="frame" x="20" y="64" width="193" height="23"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
...
