...
    }
    
    override func flagsChanged(with event: NSEvent) {
        switch event.modifierFlags.intersection(.deviceIndependentFlagsMask) {
        case [.option]:
            importButtonAction="restore"
            importRestoreButton.title = "Restore Original"
            importRestoreButton.isHidden = false
        default:
            importRestoreButton.isHidden = true
            importButtonAction="import"
            importRestoreButton.title = "Import Kubeconfig"
        }
...
        }
    }
    
    func confirmExit() -> Bool {
        let alert = NSAlert()
        alert.icon = NSImage.init(named: NSImage.cautionName)
        alert.messageText = "There are changes that have not been applied. Would you like to apply them?"
        alert.addButton(withTitle: "Apply")
        alert.addButton(withTitle: "Cancel")
        alert.addButton(withTitle: "Don't Apply")
        let resp = alert.runModal()
        if (resp == NSApplication.ModalResponse.alertFirstButtonReturn){
            self.applyClicked(self)
...
        } else if (importButtonAction == "restore") {
            let alert = NSAlert()
            alert.icon = NSImage.init(named: NSImage.cautionName)
            alert.messageText = "Are you sure?"
            alert.informativeText = "This will restore your kubeconfig file to its original state. You will lose any changes you made after you pointed your kubeconfig file to the app."
            alert.addButton(withTitle: "No")
            alert.addButton(withTitle: "Yes")
            alert.beginSheetModal(for: self.view.window!) { (returnCode: NSApplication.ModalResponse) -> Void in
                NSLog ("Restore confirmation returnCode: \(returnCode)")
                if returnCode == NSApplication.ModalResponse(rawValue: 1001) {
                    self.restoreOriginal()
                }
            }
...
